--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Mario Chatbot</title>
+    <title>JuiCy JC</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Super Mario Chatbot 🍄</h1>
+        <h1>JuiCy JC 🍄</h1>
         <div id="chat-box" class="chat-box"></div>
         <div class="input-area">
             <input type="text" id="user-input" placeholder="Ask Mario anything!">
-            <button onclick="sendMessage()">Send</button>
+            <button onclick="sendMessage()">dengu</button>
         </div>
     </div>
     <script src="script.js"></script>
