--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>JuiCy JC 🍄</h1>
+        <h1>JuiCy JC (I don't care)</h1>
         <div id="chat-box" class="chat-box"></div>
         <div class="input-area">
-            <input type="text" id="user-input" placeholder="Ask Mario anything!">
+            <input type="text" id="user-input" placeholder="Mummy Daddy ki veldham em antav!">
             <button onclick="sendMessage()">dengu</button>
         </div>
     </div>
